# cs_collision_avoidance

./: CMakeLists.txt  README.md  package.xml  plugins.xml
config/: config_default.yaml
include/collision_avoidance_behavior/: collision_avoidance_base.hpp  collision_avoidance_behavior.hpp  collision_avoidance_behavior_afferent.hpp  collision_avoidance_behavior_core.hpp  path_geometry.hpp
launch/: collision_avoidance_behavior_launch.py
plugins/: pairwise_path_lock_plugin.cpp
src/: collision_avoidance_behavior.cpp  collision_avoidance_behavior_afferent.cpp  collision_avoidance_behavior_core.cpp  collision_avoidance_behavior_node.cpp  path_geometry.cpp
test/: test_path_geometry.cpp  test_plugin_logic.cpp
