<?xml version="1.0"?>
<package format="3">
  <name>collision_avoidance_behavior</name>
  <version>1.0.0</version>
  <description>
    Distributed path-lock collision avoidance behavior for cs4home architecture.
    Inherits from cs4home_core::CognitiveModule; uses ca_structure for
    inter-agent lock negotiation.
  </description>
  <maintainer email="g.glenza@upm.es">Guillermo GP-Lenza</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>cs4home_core</depend>
  <depend>ca_structure</depend>
  <depend>as2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
